--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     </meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Recetas de cocina</title>
-    <meta name="description"content ="Recetas dulces y saladas"/>
+    <meta name="description"content ="Recetas Saladas y dulces"/>
 </head>
     <body>
         <h1>RECETAS SALADASY DULCES</h1>
