Acá cambié el nombre de la última receta

--- a/index.html
+++ b/index.html
@@ -18,25 +18,14 @@
                 <img width="560" height="500" src="https://bit.ly/2yPF8a2"/>
                 <p>Ingredientes: <br>
                 <br>
-                Harina 0000 500 grs.<br>
-                Levadura fresca 10 grs.<br>
-                Agua 150 cc.<br>
-                Leche 150 cc.<br>
-                Manteca 1 cdta.<br>
+                Tapas para empanadas arabes.        
                 Sal.<br>
                 <br>
                 Relleno:<br>
                 <br>
                 Carne picada 500 grs.<br>
                 Cebolla 1.<br>
-                Morrón rojo 1.<br>
-                Extracto de tomate 1 cda.<br>
-                Sal.<br>
-                Ajo 1 cda.<br>
-                Comino.<br>
-                Ají moido.<br>
-                Perejil.<br>
-                Menta.<br>
+
                 Tomate 3.<br>
                 Limón c/n.</p>
                 <p>Mirá el Video de la Preparación: <br>
@@ -68,7 +57,7 @@
                 <img width="560" height="500" src="https://bit.ly/2SThOz4"/>
                 <br>
                
-            <li>CHEESECAKE.</li>
+            <li>CHEESECAKE DE FRUTOS DEL BOSQUE.</li>
                 <P><br>
                 <img  src="https://bit.ly/3dBYFd6"width="560" height="500"/>
             
