modifiqué los ingredientes de la receta de las empanadas árabes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <img width="560" height="500" src="https://bit.ly/2yPF8a2"/>
                 <p>Ingredientes: <br>
                 <br>
-                Tapas para empanadas arabes.        
+                Tapas para empanadas árabes.        
                 Sal.<br>
                 <br>
                 Relleno:<br>
